# CppND-System-Monitor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  Process.h  ProcessContainer.h  ProcessParser.h  README.md  SysInfo.h  constants.h  consts.h  debug.txt  funcs.cpp  functests.cpp  main.cpp  nctest.cpp  project_info.md  readme_dev_notes.md  run.sh  util.h  workspace.code-workspace
.github/workflows/: manual.yml
include/: ProcessContainer.h  ProcessParser.h  SysInfo.h  constants.h  format.h  linux_parser.h  ncurses_display.h  process.h  processor.h  readFromFile.h  system.h  util.h
plantuml/: README.md  nanodegree-monitor.puml
src/: ProcessContainer.cpp  ProcessParser.cpp  SysInfo.cpp  format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  readFromFile.cpp  system.cpp  util.cpp
test/: CMakeLists.txt  test_parsing.cpp
